feat: started to change debug output to preprocessor statements

--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: svereten <svereten@student.42vienna.com>   +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/05/29 13:57:20 by svereten          #+#    #+#              #
-#    Updated: 2025/09/19 14:26:03 by svereten         ###   ########.fr        #
+#    Updated: 2026/02/06 15:27:24 by svereten         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 ################################################################################
@@ -27,7 +27,8 @@ OBJ_DIR = obj
 BIN_DIR = bin
 
 FILES = Bureaucrat \
-		Form \
+		AForm \
+		PresidentialPardonForm \
 
 OBJS = ${FILES:%=${OBJ_DIR}/%.o}
 DEPS = ${FILES:%=${OBJ_DIR}/%.d}
@@ -38,7 +39,7 @@ TEST_OBJS = ${FILES:%=${OBJ_DIR}/test%.o}
 OBJ_DIRS = ${sort ${dir ${OBJS}}}
 TEST_DIRS = ${sort ${dir ${TESTS}}}
 
-DEBUG = 0
+DEFS = -D DEBUG=0
 
 ################################################################################
 #
@@ -52,7 +53,7 @@ ${NAME}: ${OBJS} ${OBJ_DIR}/main.o
 	${CXX} ${CXXFLAGS} $^ -o $@
 
 ${OBJ_DIR}/%.o: ${SRC_DIR}/%.cpp | ${OBJ_DIRS}
-	bear --append -- ${CXX} ${CXXFLAGS} ${INCLUDE} -D DEBUG=${DEBUG} -c $< -o $@
+	bear --append -- ${CXX} ${CXXFLAGS} ${INCLUDE} ${DEFS} -c $< -o $@
 
 ${OBJ_DIRS}:
 	mkdir -p $@
